# MCP-Client

./: .gitignore  app.py  client.py  demo.py  main.py  pyproject.toml  requirements.txt  test.py
examples/: multiple_servers.py
mcp_servers/: calculator_mcp.py  config.json  greet_mcp.py  sse_server.py  time_mcp.py
src/client/: __init__.py  utils.py
src/exception/: __init__.py
src/inference/: gemini.py
src/mcp/: logger.py
src/mcp/client/: __init__.py  service.py  session.py  utils.py
src/mcp/client/transport/: base.py  sse.py  stdio.py  streamable_http.py
src/mcp/session/: __init__.py
src/mcp/transport/: base.py  sse.py  stdio.py  streamable_http.py  websocket.py
src/mcp/types/: capabilities.py  common.py  completion.py  content.py  elicitation.py  info.py  initialize.py  json_rpc.py  logging.py  notification.py  ping.py  prompts.py  resources.py  roots.py  sampling.py  schemas.py  tasks.py  tools.py
src/message/initialize/: __init__.py
src/message/ping/: __init__.py
src/message/prompts/: __init__.py
src/message/resources/: __init__.py
src/message/tools/: __init__.py
src/session/: __init__.py
src/transport/: base.py  sse.py  stdio.py  streamable_http.py  websocket.py
src/types/: capabilities.py  initialize.py  json_rpc.py  prompts.py  resources.py
