[project]
name = "mcp-client"
version = "0.1.0"
description = "MCP Client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "mcp>=1.20.0",
    "pydantic>=2.12.3",
    "websockets>=15.0.1",
]
